# OpenMesh

./: .gitlab-ci.yml  CMakeLists.txt  README.md  VERSION
CI/: ci-linux-build.sh  ci-linux-test.sh  ci-mac-deploy.sh  ci-mac-test.sh  linux-settings.sh  mac-settings.sh
Doc/: changelog.docu
Doc/Examples/: decimater.cc  decimater_ModAspectRatioT.cc  decimater_ModEdgeLengthT.cc  decimater_ModHausdorffT.cc  decimater_ModIndependentT.cc  decimater_ModNormalDeviationT.cc  decimater_ModNormalFlippingT.cc  decimater_ModRoundnessT.cc
src/OpenMesh/Apps/Subdivider/: adaptive_subdivider.cc
src/OpenMesh/Core/IO/: SR_binary_vector_of_fundamentals.inl
src/OpenMesh/Core/IO/importer/: BaseImporter.hh  ImporterT.hh
src/OpenMesh/Core/IO/reader/: PLYReader.cc  PLYReader.hh
src/OpenMesh/Core/Mesh/: PolyConnectivity.cc
src/OpenMesh/Core/System/: config.h
src/OpenMesh/Tools/Decimater/: DecimaterT.cc
src/OpenMesh/Tools/Subdivider/Adaptive/Composite/: CompositeT.cc  CompositeT.hh  CompositeTraits.hh  RuleInterfaceT.hh  RulesT.cc
src/OpenMesh/Tools/Utils/: TriangulatorT.cc  TriangulatorT.hh
src/Python/: CMakeLists.txt
src/Python/Example/: CMakeLists.txt
src/Unittests/: unittests_add_face.cc  unittests_polymesh_triangulate.cc  unittests_polymesh_vec2i.cc  unittests_read_write_OM.cc
