CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Example)

FILE(GLOB SOURCES *.cc *hh)

INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${LINK_DIRECTORIES})

ADD_LIBRARY(example SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(example ${LINK_LIBRARIES})

SET_TARGET_PROPERTIES(
	example
	PROPERTIES
	PREFIX ""
	DEBUG_POSTFIX ""
	RELEASE_POSTFIX ""
)

SET(OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/python/)
FILE(MAKE_DIRECTORY ${OUTPUT_DIRECTORY})

SET_TARGET_PROPERTIES(example PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
SET_TARGET_PROPERTIES(example PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
SET_TARGET_PROPERTIES(example PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})

FOREACH(CONFIG ${CMAKE_CONFIGURATION_TYPES})
	STRING(TOUPPER ${CONFIG} CONFIG)
	SET_TARGET_PROPERTIES(example PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${CONFIG} ${OUTPUT_DIRECTORY})
	SET_TARGET_PROPERTIES(example PROPERTIES LIBRARY_OUTPUT_DIRECTORY_${CONFIG} ${OUTPUT_DIRECTORY})
	SET_TARGET_PROPERTIES(example PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_${CONFIG} ${OUTPUT_DIRECTORY})
ENDFOREACH()

IF(APPLE)
	SET_TARGET_PROPERTIES(example PROPERTIES SUFFIX ".so")
	IF (NOT (CMAKE_MAJOR_VERSION LESS 3))
		SET_TARGET_PROPERTIES(example PROPERTIES MACOSX_RPATH TRUE)
	ENDIF()
ENDIF()

IF(WIN32)
	SET_TARGET_PROPERTIES(example PROPERTIES SUFFIX ".pyd")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
ENDIF()
